--- a/insights.html
+++ b/insights.html
@@ -72,7 +72,7 @@
           </template>
         </ul>
       </section>
-      <section id="side" class="container--m col gap--xl">
+      <section class="side container--m col gap--xl">
         <div class="side__trending col gap--m">
           <div class="section__title-wrapper row between">
             <p class="section__title">What's Trending</p>
