--- a/authors.html
+++ b/authors.html
@@ -26,6 +26,7 @@
             {{/each}}
           </template>
         </ul>
+        <button class="more-authors btn-primary">see more authors</button>
       </section>
       <section class="side container--m col gap--xl">
         <div class="side__trending col gap--m">
