--- a/main.html
+++ b/main.html
@@ -511,7 +511,7 @@
             <p class="section__title">featured authors</p>
           </div>
           <ul class="section__content featured-authors__list col gap--m">
-            <script
+            <template
               id="featuredAuthorsTemplate"
               type="text/x-handlebars-template"
             >
@@ -528,7 +528,7 @@
                   </div>
                 </li>
               {{/each}}
-            </script>
+            </template>
           </ul>
           <div class="component-viewAll-authors row end"></div>
         </div>
