--- a/index.html
+++ b/index.html
@@ -81,10 +81,13 @@
         <form class="newsletter__form col gap--m">
           <div class="newsletter__inputs col gap--s">
             <input
-              class="newsletter__input"
+              class="newsletter__name newsletter__input"
               placeholder="Enter your full name"
             />
-            <input class="newsletter__input" placeholder="Enter your email" />
+            <input
+              class="newsletter__email newsletter__input"
+              placeholder="Enter your email"
+            />
           </div>
           <label class="newsletter__consent">
             <input type="checkbox" class="newsletter__checkbox" />
