--- a/main.html
+++ b/main.html
@@ -64,17 +64,6 @@
             </template>
           </div>
         </div>
-        <div class="cover__slide-controller slide-controller row gap--m">
-          <button class="slide-controller__btn btn--prev btn--circle-l">
-            <i class="fa-solid fa-chevron-left"></i>
-          </button>
-          <button
-            href="#"
-            class="slide-controller__btn btn--next btn--circle-l"
-          >
-            <i class="fa-solid fa-chevron-right"></i>
-          </button>
-        </div>
       </section>
 
       <!-- Section: Editor's Pick -->
@@ -600,7 +589,7 @@
           </div>
           <a href="#" class="section__img">
             <!-- <img src="/data/insights/thumbnail/test.webp" /> -->
-            <p>advertisement img here</p>
+            <img src="/assets/image/ad.webp" />
           </a>
         </div>
       </div>
