footer menu link

--- a/index.html
+++ b/index.html
@@ -224,16 +224,26 @@ c0,9.8-7.9,17.7-17.7,17.7s-17.7-7.9-17.7-17.7V88.7z"
           </div>
           <ul class="footer__menu-list col gap--s uppercase">
             <li class="footer__menu-item">
-              <a class="footer__menu-link hover--darker" href="#">Insights</a>
+              <p
+                class="footer__menu-link hover--darker"
+                onclick="navigateTo(`/insights`); return false;"
+              >
+                Insights
+              </p>
             </li>
             <li class="footer__menu-item">
-              <a class="footer__menu-txt hover--darker" href="#">Quiz</a>
+              <p class="footer__menu-txt hover--darker">Quiz</p>
             </li>
             <li class="footer__menu-item">
-              <a class="footer__menu-txt hover--darker" href="#">Authors</a>
+              <p
+                class="footer__menu-txt hover--darker"
+                onclick="navigateTo(`/authors`); return false;"
+              >
+                Authors
+              </p>
             </li>
             <li class="footer__menu-item">
-              <a class="footer__menu-txt hover--darker" href="#">Report</a>
+              <p class="footer__menu-txt hover--darker">Report</p>
             </li>
           </ul>
         </div>
